<resources>
    <string name="app_name"></string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="registration">Regisztráció</string>
    <string name="login">Bejelentkezés</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">Email cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Postai cím</string>
    <string name="buyer">Vásárló</string>
    <string name="seller">Eladó</string>
    <string name="product_description">Termék Leírás</string>
    <string-array name="phone_modes">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Jelszó</string>
    <string name="action_sign_in">Bejelentkezés</string>
    <string name="action_sign_in_google">Google Bejelentkezés</string>
    <string name="action_registration">Regisztráció</string>
    <string name="action_sign_in_short">Bejelentkezés</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_charger_map">ChargerMapActivity</string>
    <string name="item_info_placeholder">Item Info</string>
    <string name="item_placeholder">Item PlaceHolder</string>
    <string name="account_type">VmilyenAccount</string>
    <string name="customer">VmilyenCustomer</string>
    <string name="startChargingBtnText">Töltök most</string>
    <string name="reserveNowBtnText">Lefoglalom 30 percre</string>
    <string name="chargerDetialsBtnText">Megnézem</string>
    <string name="maxPowerPlaceholder">maxPowerPlaceholder</string>
    <string name="connectorsPlaceholder">connectorsPlaceholder</string>
    <string name="addressPlaceholder">addressPlaceholder</string>
    <string name="ItemNamePlaceholder">ItemNamePlaceholder</string>
    <string name="sessionInProgressTitle">Töltés folyamatban...</string>
    <string name="scanQRCodeBtnText">QR kód olvasás</string>
    <string name="editProfileBtnText">Profil szerkesztése</string>
    <string name="openChargingStationListBtnText">Töltők listája</string>
    <string name="homeTitleText">Menü</string>
    <string name="title_activity_qrcode_scanner">QRCodeScannerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="profileSettings">EV profil módosítása</string>
    <string name="title_activity_login_activityom">LoginActivityom</string>
    <string name="LogoutBtnText">Kijelentkezés</string>
</resources>
